# extempore-llvm10-experiments

./: .gitignore  README.md  shell.nix
src/: CMakeLists.txt  EXTClosureAddressTable.cpp  EXTClosureAddressTable.h  EXTLLVM.cpp  EXTLLVM.h  EXTMutex.h  EXTZONES.cpp  EXTZONES.h  UNIV.h  main.cpp
src/ir/: five.ll  four.ll  one.ll  seven.ll  six.ll  three.ll  two.ll
